internal/xds/translator/testdata/out/xds-ir-sublinear/ext-proc.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    matcher:
      matcherTree:
        exactMatchMap:
          map:
            /bar:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /bar
                  name: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
                  route:
                    cluster: httproute/default/httproute-3/rule/0
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.ext_proc/envoyextensionpolicy/envoy-gateway/policy-for-route-3/extproc/0:
                      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
                      config: {}
            /foo:
              action:
                name: route
                typedConfig:
                  '@type': type.googleapis.com/envoy.config.route.v3.Route
                  match:
                    pathSeparatedPrefix: /foo
                  name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
                  route:
                    cluster: httproute/default/httproute-1/rule/0
                    upgradeConfigs:
                    - upgradeType: websocket
                  typedPerFilterConfig:
                    envoy.filters.http.ext_proc/envoyextensionpolicy/default/policy-for-route-1/extproc/0:
                      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
                      config: {}
                    envoy.filters.http.ext_proc/envoyextensionpolicy/default/policy-for-route-2/extproc/0:
                      '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
                      config: {}
        input:
          name: request-headers
          typedConfig:
            '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
            headerName: :path
      onNoMatch:
        matcher:
          matcherTree:
            input:
              name: request-headers
              typedConfig:
                '@type': type.googleapis.com/envoy.type.matcher.v3.HttpRequestHeaderMatchInput
                headerName: :path
            prefixMatchMap:
              map:
                /bar/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /bar
                      name: httproute/default/httproute-2/rule/0/match/0/gateway_envoyproxy_io
                      route:
                        cluster: httproute/default/httproute-3/rule/0
                        upgradeConfigs:
                        - upgradeType: websocket
                      typedPerFilterConfig:
                        envoy.filters.http.ext_proc/envoyextensionpolicy/envoy-gateway/policy-for-route-3/extproc/0:
                          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
                          config: {}
                /foo/:
                  action:
                    name: route
                    typedConfig:
                      '@type': type.googleapis.com/envoy.config.route.v3.Route
                      match:
                        pathSeparatedPrefix: /foo
                      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
                      route:
                        cluster: httproute/default/httproute-1/rule/0
                        upgradeConfigs:
                        - upgradeType: websocket
                      typedPerFilterConfig:
                        envoy.filters.http.ext_proc/envoyextensionpolicy/default/policy-for-route-1/extproc/0:
                          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
                          config: {}
                        envoy.filters.http.ext_proc/envoyextensionpolicy/default/policy-for-route-2/extproc/0:
                          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
                          config: {}
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
  - domains:
    - ""
    name: envoy-gateway/gateway-1/http/
    routes:
    - match:
        prefix: /
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_proc/envoyextensionpolicy/envoy-gateway/policy-for-gateway-1/extproc/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.ext_proc/envoyextensionpolicy/envoy-gateway/policy-for-gateway-2/extproc/0:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
